# video-based-PD-risk-analyzer

./: .gitignore  README.md  manage.py  pyproject.toml
config/: search_queries.yaml  settings.yaml
demo_django/: README.md  db.sqlite3
docs/: ACTIVITY_SCHEMA.md  ANALYSIS_RUNTIME_AND_FALLBACK.md  API_REFERENCE.md  CAREPD_REPRO.md  CURRENT_STATE_AND_PLAN_2026-03-30.md  DEVELOPMENT_SETUP.md  MODELS_AND_FORMULAS.md  PROJECT_FULL_DOCUMENTATION.md  RESEARCH_NOTE_PD_RISK_2026-02-15.md  STROKE_GAIT_ANALYSIS_V1.md  STROKE_GAIT_CALIBRATION.md  TURN_FOG_REFERENCES.md  UI_API_ALIGNMENT.md  UI_DATA_FLOW.md
examples/: Parkinson's Disease Freezing & Festinating Gait [EQ0HG16EC3g]_640.webm  demo.py  quick_start.py  record_webcam.py  test_real_video.py
output/: stroke_gait_calibration_report.json  voisard_2025_summary_records.json  voisard_hs_threshold_profiles.json
outputs/: eq0hg16ec3g_analysis_320_sr10.json  eq0hg16ec3g_bodywithfeet.json  eq0hg16ec3g_bodywithfeet_tuned.json
reports/: model_comparison_multiclass.json  pd_risk_eval_updrs_pooled.json  pd_risk_threshold_tuning_binary.json  pd_risk_threshold_tuning_binary_fast.json
scripts/: animate_gait.py  download_all_papers.py  run_django_server.sh  score_stroke_gait_results.py  tune_stroke_gait_thresholds.py  visualize_pkl.py
server/: db.sqlite3
tests/: __init__.py  conftest.py  test_api_contracts.py  test_api_views_contract.py  test_auth_views.py  test_collection.py  test_core.py  test_experiment.py  test_literature.py  test_pipeline.py  test_report.py  test_stroke_gait_analysis.py  test_stroke_gait_calibration.py  test_stroke_gait_dataset_adapters.py
web/: app.py  app_simple.py  pd_symptoms_analyzer.py  smart_analyzer.py
(+141 files in other folders)
